--- a/templates/index.html
+++ b/templates/index.html
@@ -407,7 +407,7 @@
                         <div class="row justify-content-left align-self-center" style="padding-bottom:10px;padding-left:10px;">
                             <button type="submit" class="btn btn-primary">Predict</button>
                             <span style="width:120px"></span>
-                            <button type="reset" class="btn btn-secondary" onclick="resetForm();">Reset</button>
+                            <!--<button type="reset" class="btn btn-secondary" onclick="resetForm();">Reset</button>-->
                         </div>
 
                     </div>
